# libshtools

./: .gitmodules
shtools/: CMakeLists.txt  shtools  shtools.cpp  shtools.hpp
